Bug 1348573 - Fix button text color in focused / active / checked states with High Contrast black and High Contrast white themes. r=Gijs
MozReview-Commit-ID: BwEnPur1AJ5

UltraBlame original commit: e6405802bfc0881d8cf36e250eaca1732b25ece2

--- a/toolkit/themes/windows/global/button.css
+++ b/toolkit/themes/windows/global/button.css
@@ -42,8 +42,12 @@ button:-moz-focusring > .button-box {
 @media (-moz-windows-default-theme: 0) {
   @media (-moz-windows-compositor) {
     
-    button[default="true"],
-    button:hover {
+
+
+
+
+
+    button:-moz-any([default="true"],:hover,:focus):not(:-moz-any(:active,[disabled="true"],[open="true"],[checked="true"])) {
       color: HighlightText;
     }
   }
